--- a/portfolio/src/pages/Contact/Contact.scss
+++ b/portfolio/src/pages/Contact/Contact.scss
@@ -3,24 +3,9 @@
 $default-border: calc(min(0.1rem, 0.1vw));
 
 .Contact {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  overflow-x: hidden;
-}
-
-.Module {
-  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
-  overflow-x: hidden;
-}
-
-.ContactContainer {
-  height: calc(100% - #{$default-margin});
-  align-items: stretch;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  position: absolute;
+  bottom: $default-margin;
+  width: calc(100vw - 2 * #{$default-margin});
 }
 
 .row {
